--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "3.2.0",
+    "country-codes": "0.0.3",
     "firebase": "^5.10.1",
     "ionic-angular": "3.9.3",
     "ionic2-auto-complete": "^1.6.2-alpha",
